roles/gateway/files/iptables/rules.v4
# NAT CHAIN
*nat
-A PREROUTING -s 192.168.0.202/32 -d 192.168.0.232/32 -p tcp -m tcp --dport 3306 -j DNAT --to-destination 192.168.1.204:3306
-A PREROUTING -s 192.168.0.129/32 -d 192.168.0.232/32 -p tcp -m tcp --dport 3306 -j DNAT --to-destination 192.168.1.204:3306
-A POSTROUTING -s 192.168.0.202/32 -d 192.168.1.204/32 -j SNAT --to-source 192.168.1.155
-A POSTROUTING -s 192.168.0.129/32 -d 192.168.1.204/32 -j SNAT --to-source 192.168.1.155
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# FILTER CHAIN
*filter
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -o eth0 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.0.129/32 -d 192.168.1.204/32 -i eth1 -o eth2 -p tcp -m tcp --dport 3306 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A FORWARD -s 192.168.0.202/32 -d 192.168.1.204/32 -i eth1 -o eth2 -p tcp -m tcp --dport 3306 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A FORWARD -i eth2 -o eth1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.1.155/32 -d 192.168.1.204/32 -j ACCEPT
COMMIT
